refactor(caching): streamline cache initialization and improve page streaming logic